# gpufl-client

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml
example/: CMakeLists.txt  block_style_example.cu
example/cuda/: CMakeLists.txt  block_style_example.cu  check_conflict.cu  check_device.cu  system_monitor.cu
example/python/: 01_basic.py  02_numba_cuda.py  03_kernel.launch.py  requirements.txt
example/python/analyzer/: 01_analyzer_sample.py
example/python/viz/: 01_plot_memory_timeline.py
include/gpufl/backends/: cuda.hpp  host_collector.hpp
include/gpufl/backends/amd/: rocm_collector.hpp
include/gpufl/backends/nvidia/: cuda_collector.cpp  cuda_collector.hpp  nvml_collector.cpp  nvml_collector.hpp
include/gpufl/core/: common.hpp  events.hpp  gpufl.cpp  logger.cpp  logger.hpp  monitor.hpp  runtime.cpp  runtime.hpp  sampler.cpp  sampler.hpp
include/gpufl/cuda/: cupti_backend.cpp  cupti_backend.hpp  monitor.cpp
include/gpumon/: gpumon.hpp
include/gpumon/backends/: cuda.hpp
include/gpumon/core/: common.hpp  monitor.hpp
python/: bindings.cpp
python/gpufl/: utils.py
python/gpufl/viz/: __init__.py  reader.py  timeline.py  visualizer.py
python/gpumon/: __init__.py  utils.py
schema/: README.md  ndjson.schema.json
tests/: CMakeLists.txt  verify_pipeline.py
tests/backends/nvidia/: test_cuda_collector.cpp  test_nvidia_backend.cpp  test_nvml_collector.cpp
tests/common/: test_utils.hpp
