[build-system]
requires = ["scikit-build-core", "pybind11", "cmake", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "gpufl"
version = "0.0.1"
description = "GPU Monitoring Client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
numba = ["numba", "numpy"]

[tool.scikit-build]
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]
cmake.define = { BUILD_PYTHON = "ON" }
cmake.build-type = "Release"
